--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -85,6 +85,69 @@
   padding: 2px 4px;
 }
 
-.makeMeRed{
-  color: #0f0;
+.name{
+  color: #fff;
+  margin-left: 110px;
+  margin-top: 0px;
+  font-size: 16px;
+}
+.bgImage{
+  margin-left: -9px;
+  margin-top: -8px;
+}
+.imagePos{
+  margin-top: -250px;
+}
+.profile{
+  margin-left: 115px;
+  width: 35%;
+}
+.mpossibleLogo{
+  width: 80%;
+  margin-left: 30px;
+}
+.theTalk{
+  font-size: 20px;
+  padding-left: 20px;
+}
+.thePlace{
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 3px;
+}
+.description{
+  padding-left: 20px;
+  padding-right: 30px;
+  padding-top: 5px;
+  font-size: 10px;
+  color: darkgray;
+}
+.stars{
+  margin-left: 105px;
+  margin-top: 20px;
+}
+.backgroundColor{
+  padding: 8px;
+  color: black;
+  background-color: white;
+  height: 30%;
+  border-radius: 10px;  
+}
+.textArea{
+  color: #848484fa;
+  padding-left: 4px;
+  padding-right: 25px !important;
+  border: solid 2px;
+}
+.accordionContainer{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.accordion-item-content{
+  background-color :black !important;
+  height: 1px !important;
+}
+.input-clear-button{
+  right: -30px !important; 
 }
