--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -87,41 +87,45 @@
 
 .name{
   color: #fff;
-  margin-left: 110px;
+  margin-left: 100px;
   margin-top: 0px;
-  font-size: 16px;
+  font-size: 18px;
 }
 .bgImage{
-  margin-left: -9px;
+  margin-left: -75px;
   margin-top: -8px;
 }
 .imagePos{
   margin-top: -250px;
 }
 .profile{
-  margin-left: 115px;
-  width: 35%;
+  margin-left: 100px;
+  margin-top: 30px;
+  width: 40%;
 }
 .mpossibleLogo{
-  width: 80%;
-  margin-left: 30px;
+  width: 90%;
+  margin-left: 15px;
+  margin-top: 16px;
+  margin-bottom: -25px;
 }
 .theTalk{
   font-size: 20px;
+  margin-bottom: 15px;
+  margin-top: -10px;
   padding-left: 20px;
 }
 .thePlace{
     font-size: 20px;
     padding-left: 20px;
-    padding-top: 10px;
     padding-bottom: 3px;
 }
 .description{
+  color: darkgray;
+  margin-top: -10px;
   padding-left: 20px;
   padding-right: 30px;
-  padding-top: 5px;
   font-size: 10px;
-  color: darkgray;
 }
 .stars{
   margin-left: 105px;
@@ -143,7 +147,19 @@
 .accordionContainer{
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: -10px;
 }
 .input-clear-button{
   right: -30px !important; 
+}
+.imgSize{
+  width: 100%;
+  height: 200px;
+}
+.swiperPadding{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.get-data-from-user{
+  margin-top: -10px;
 }
