--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -123,3 +123,13 @@
 .circle-img {
   border-radius: 100%;
 }
+
+#profilePicture-activity{
+  height: 130px;
+  width: 130px;
+}
+.profile .name{
+  margin: 0;
+  margin-top: .4em;
+  font-size: 1.5em !important;
+}
