--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -21,6 +21,11 @@
   text-align: center;
 }
 
+.profile img{
+  display: block;
+  margin: 0 auto;
+}
+
 .divider {
   border-top: 1px solid #cccccc3d;
   width: 90%;
