--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -24,6 +24,9 @@
 .profile img{
   display: block;
   margin: 0 auto;
+  border-radius: 100%;
+  position: relative;
+  bottom: 1em;
 }
 
 .divider {
