visited booths modal

--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -4,11 +4,12 @@
   padding: 100px 0px;
 }
 
-.booth img {
+.booth img ,.booth a {
   width: 100%;
   height: 100%;
   width: 70px;
   height: 70px;
+  margin-bottom: 1em;
 }
 
 .booth.active {
@@ -49,4 +50,30 @@
 .social-buttons a {
   margin-bottom: 10px;
   width: 100%;
+}
+.modal-sheet{
+  position: absolute;
+  background: #fff;
+  width: 85%;
+  top: 45%;
+}
+
+.modal-sheet.hide{
+  display: none;
+}
+
+.modal-sheet.show{
+  display:block;
+}
+
+a.sheet-btn.button {
+  display: inline-block;
+}
+
+.sheet-btn-wrapper{
+  text-align: right;
+}
+
+.sheet-div{
+  text-align: right;
 }
