--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -6,6 +6,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
 }
 
 .activity .profile img {
@@ -135,4 +136,8 @@
   margin: 0;
   margin-top: .4em;
   font-size: 1.5em !important;
+}
+
+.item-input-wrap.input-dropdown::before{
+  display: none;
 }
