re-design ratings

--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -79,3 +79,8 @@ a.sheet-btn.button {
 .sheet-div{
   text-align: right;
 }
+#account-pic{
+  height:100px;
+  width:100px;
+  border-radius:100%;
+}
