Count of visited booth on profile page

--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -84,3 +84,8 @@ a.sheet-btn.button {
   width:100px;
   border-radius:100%;
 }
+span.range-booths {
+  position: relative;
+  float: right;
+  top: 1em;
+}
