--- a/src/components/Screens/HomePage/style.css
+++ b/src/components/Screens/HomePage/style.css
@@ -47,3 +47,11 @@
     width: 100%;
     height: 100%;
 }
+
+.splash-img{
+    position:absolute;
+     top:0;left:0;
+     height:100%;
+     width:100%;
+     z-index:999999;
+}
