--- a/src/components/Tabs/Booths/style.css
+++ b/src/components/Tabs/Booths/style.css
@@ -43,3 +43,26 @@
 .collapse-info {
   font-size: .8em;
 }
+
+.booth-img{
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
+
+.booth-wrapper{
+  text-align: center;
+  margin-top: 7em;
+}
+
+.booth-wrapper .company-name{
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+
+.booth-wrapper .company-desc{
+  font-weight: 300;
+  color: gray;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+}
