--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -7,8 +7,7 @@
 .booth img ,.booth a {
   width: 100%;
   height: 100%;
-  width: 70px;
-  height: 70px;
+  min-height: auto;
   margin-bottom: 1em;
 }
 
