--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -119,6 +119,7 @@
   padding: 10px;
   z-index: 9999;
   position: relative;
+  bottom: 3em;
 }
 
 .activities .talk img {
@@ -126,15 +127,17 @@
 }
 
 .activities a .talk .title {
-  position: absolute;
-  top: 0%;
   font-size: 10px;
   overflow: hidden;
   background: var(--blue1);
-  margin: 10px 0px;
-  border-radius: 0px 3px 3px 0px;
+  border-radius: 4px;
   padding: 2px 4px;
   color: #fff;
+  width: 80%;
+  text-align: center;
+  position: relative;
+  bottom: .5em;
+  margin: auto;
 }
 
 .circle-img {
@@ -174,7 +177,7 @@
   padding: 1.5em;
 }
 .activity-title {
-  font-size: 1.5em;
+  font-size: 1.4em;
   font-weight: bold;
 }
 
@@ -200,4 +203,12 @@ a.btn-Question.button.button-fill.button-small{
   width: 70% !important;
   text-align: center !important;
   letter-spacing: 2px;
+}
+.wrapper-star{
+  padding: 1em;
+  padding-top: 2.2em;
+}
+
+.date-activity {
+  margin-top: 1.1em;
 }
