--- a/src/components/Tabs/Booths/style.css
+++ b/src/components/Tabs/Booths/style.css
@@ -89,7 +89,7 @@
 .notif-wrapper{
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 150%;
   z-index: 9999999;
   background-color: #000000e0 !important;
 }
