--- a/src/components/Tabs/Dashboard/style.css
+++ b/src/components/Tabs/Dashboard/style.css
@@ -212,3 +212,9 @@ a.btn-Question.button.button-fill.button-small{
 .date-activity {
   margin-top: 1.1em;
 }
+
+.title.activity-desc,.activity-time {
+  font-weight: lighter;
+  font-family: sans-serif;
+  font-size: .8em;
+}
