--- a/src/components/Screens/LoginPage/style.css
+++ b/src/components/Screens/LoginPage/style.css
@@ -68,3 +68,38 @@
 form.list{
     padding-top: 0 !important;
 }
+
+.modal-alert{
+    color: #222;
+    background: #fff;
+    width: 50%;
+    height: auto;
+    padding:1.5em 2em;
+    border-radius: 2px;
+    position: absolute;
+    top: 35%;
+    left: 18%;
+    z-index: 2;
+}
+.modal-alert a{
+display: block;
+float: right;
+margin-top: 3em;
+background: #0d2541;
+color: #fff;
+padding: .7em 2em;
+border-radius: 4px;
+}
+.modal-alert-wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #222222fa;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.loading{
+    z-index: 9999999 !important;
+}
