fix color every boths

--- a/src/components/Tabs/Booths/style.css
+++ b/src/components/Tabs/Booths/style.css
@@ -58,7 +58,7 @@
   margin: auto !important;
   height: 100px;
 }
-
+f.booth-wrapper .company-desc
 .booth-wrapper{
   text-align: center;
 }
@@ -67,12 +67,11 @@
   font-size: 1.5em;
   text-transform: uppercase;
   color: #fff;
+  text-align: center;
 }
 
 .booth-wrapper .company-desc{
-  font-weight: 300;
-  color: gray;
-  font-family: sans-serif;
+  font-weight: 300; 
   letter-spacing: 1px;
 }
 
@@ -136,9 +135,8 @@
 }
 
 .booth-wrapper .company-desc{
-  font-size: .8em;
+  font-size: .7em;
   padding-top: 0 !important;
   position: relative;
-  bottom: 1.5em;
-  padding-bottom: 2em !important;
+  bottom: 1.5em; 
 }
