--- a/src/components/Tabs/Account/style.css
+++ b/src/components/Tabs/Account/style.css
@@ -4,12 +4,7 @@
   padding: 10px 0px;
 }
 
-.booth img ,.booth a {
-  width: 100%;
-  height: 100%;
-  min-height: auto;
-  margin-bottom: 1em;
-}
+
 
 .booth.active {
   opacity: 1;
@@ -127,4 +122,30 @@ span.range-booths {
 }
 span#top-title {
   padding-left: .5em !important;
+}
+
+.booth-img-wrapper-account {
+  height: 70px;
+  width: 70px;
+  background: #fff;
+  margin: .7em;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  padding: .2em;
+}
+
+.booth a {
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+  position: relative;
+}
+.booth img {
+width: 100%;
+  height: auto;
+  max-height: 50%;
+  position: relative;
+  top: 1.2em;
+
 }
